<resources>
    <string name="app_name">Catalog Craft</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logout">LOGOUT</string>
    <string name="search">Search</string>
    <string name="search_results">Suggestions:</string>
    <string name="click_above_to_search_for_predefined_catalogs">Click above to search for predefined Catalogs</string>
    <string name="add_details_for_your_product">Add Details for your product:</string>
    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="ean">EAN</string>
    <string name="seller_sku">Seller SKU</string>
    <string name="mrp">MRP</string>
    <string name="your_price">Your Price</string>
    <string name="quantity">Quantity</string>
    <string name="gst">GST %</string>
    <string name="hsn_code">HSN Code</string>
    <string name="additional_details">Additional Details</string>
    <string name="additional_description">Additional Description</string>
    <string name="selling_offer">Selling Offer</string>
    <string name="upload_your_image"><u>Upload Your Product Image:</u></string>
    <string name="tap_below_to_upload_your_images">Tap below to upload your images</string>
    <string name="upload">UPLOAD</string>
    <string name="bar_code">bar code</string>
    <string name="camera">Camera</string>
    <string name="model">Model</string>
    <string name="your_catalog_item_list">Your Catalog Item List:</string>
    <string name="choose_the_category_of_your_product">Choose the Category of your product</string>
    <string name="category">Category</string>
    <string name="list_of_pre_existing_categories">List of pre-existing Categories:</string>
    <string name="you_can_also_click_below_to_select_your_category">You can also click below to select your category</string>
    <string name="next">Next</string>
    <string name="login_signin">Login/Signin</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="want_to_register">want to register?</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="register_signup">Register/Signup</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="want_to_login">want to login?</string>
    <string name="login_small">Login</string>
    <string name="register_caps">REGISTER</string>
    <string name="do_you_want_to_search_for_pre_existing_catalogs">Do you want to search for pre-existing Catalogs?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_name_required">Category Name Required</string>
    <string name="category_name_is_required_to_proceed">Category Name is required to proceed.</string>
    <string name="ok">OK</string>
    <string name="password_match_error">Password match Error</string>
    <string name="confirm_password_do_not_match">Confirm Password do not match</string>
    <string name="go_to_setting_and_enable_all_permission">Go to Setting and Enable All Permission</string>
    <string name="all_permission_are_required_for_this_app">All Permission are Required for this app</string>
    <string name="flash_is_not_available">Flash is not available</string>
    <string name="photo_capture_succeeded">Photo Capture Succeeded: %1$s</string>
    <string name="mobile_no">Mobile No.: %1$s</string>
    <string name="enter_the_name_of_your_product">Enter the name of your Product</string>
    <string name="enter_the_ean_code_of_your_product">Enter the EAN code of your product</string>
    <string name="enter_the_mrp_of_your_product">Enter the MRP of your Product</string>
    <string name="enter_your_sku_number">Enter your SKU number</string>
    <string name="enter_the_price_at_which_you_want_to_sell_your_product">Enter the price at which you want to sell your Product</string>
    <string name="enter_the_hsn_code_of_your_product">Enter the HSN code of your Product</string>
    <string name="enter_a_suitable_description_of_your_product">Enter a suitable description of your Product</string>
    <string name="enter_the_gst_for_your_product">Enter the GST % for your Product</string>
    <string name="enter_the_quantity_of_your_product">Enter the quantity of your Product</string>
    <string name="enter_any_other_information_you_want_to_enter_about_your_product">Enter any other information you want to enter about your Product</string>
    <string name="enter_the_selling_offer_for_your_product">Enter the selling offer for your Product</string>
    <string name="change_your_language">Change your language:</string>
    <string name="all_field_are_required">All field are required</string>
    <string name="you_have_missed_one_or_more_field_please_fill_all_the_fields_as_they_are_required">You have missed one or more field, please fill all the fields as they are required</string>
    <string name="total">"  Total "</string>
    <string name="items">" items"</string>
    <string name="all">Click here to see all Catalogues</string>
    <string name="click_here_to_see_your_catalogues">click here to see your catalogues</string>
    <string name="please_wait_while_fetching_details_about_your_picture">Please wait while fetching details about your picture</string>
    <string name="additional_offer">Additional Offer</string>
    <string name="add_any_other_offers_that_you_want_to_apply">Add any other offers that you want to apply</string>
    <string name="brand">Brand</string>
    <string name="enter_the_name_of_the_brand_of_the_product">Enter the name of the brand of the Product</string>
    <string name="color">Color</string>
    <string name="enter_the_color_of_your_product">Enter the color of your Product</string>
    <string name="size">Size</string>
    <string name="enter_the_size_of_your_product">Enter the size of your Product</string>
    <string name="click_on_the_search_field_to_search">Click on the search field to search:</string>
</resources>