<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment"
    android:background="@color/my_white1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/register_signup"
            android:textColor="@color/middle_orange"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/Btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/et_rname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawableStart="@drawable/account_icon"
                android:drawableTint="@color/middle_orange"
                android:drawablePadding="16dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="16dp"
                android:textColor="@color/middle_orange"
                android:textColorHint="@color/middle_orange" />

            <EditText
                android:id="@+id/et_rphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:drawableStart="@drawable/phone_icon"
                android:drawableTint="@color/middle_orange"
                android:drawablePadding="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/phone"
                android:inputType="number"
                android:padding="16dp"
                android:textColor="@color/middle_orange"
                android:textColorHint="@color/middle_orange" />

            <EditText
                android:id="@+id/et_rmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/email_icon"
                android:drawableTint="@color/middle_orange"
                android:drawablePadding="16dp"
                android:background="@drawable/edittext_bg"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/middle_orange"
                android:textColorHint="@color/middle_orange" />

            <EditText
                android:id="@+id/et_rpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/pass_icon"
                android:drawableTint="@color/middle_orange"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/middle_orange"
                android:textColorHint="@color/middle_orange"
                />


            <EditText
                android:id="@+id/et_rconfirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/pass_icon"
                android:drawableTint="@color/middle_orange"
                android:drawablePadding="16dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/middle_orange"
                android:textColorHint="@color/middle_orange" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/want_to_login"
                    android:textColor="@color/middle_orange"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/rlogin_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/login_small"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/rregister_btn"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_margin="16dp"
                android:backgroundTint="@color/middle_orange"
                android:elevation="10dp"
                android:fontFamily="sans-serif-black"
                android:shadowColor="@color/light_orange"
                android:text="@string/register_caps"
                android:textColor="#334B94"
                android:textSize="20sp" />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>