<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BarCodeFragment"
    android:background="@color/my_white1">

    <LinearLayout
        android:id="@+id/topNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/my_white1">

        <TextView
            android:id="@+id/search_catalog_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".25"
            android:hint="@string/search"
            android:textSize="16sp"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/dark_gray"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/search_icon"
            android:drawableTint="@color/dark_gray"
            android:background="@drawable/search_bg"
            android:backgroundTint="#CDDAE2"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="20dp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/dark_gray"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/form_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/zxing_transparent">
            <ImageView
                android:id="@+id/form_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/form_icon"
                android:background="@drawable/circle"
                android:backgroundTint="#CDDAE2"
                android:layout_margin="10dp"
                app:tint="@color/dark_gray"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="100dp">
        <Button
            android:id="@+id/bar_code_btn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/middle_orange"
            android:text="@string/bar_code"
            android:textColor="#334B94"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/camera_btn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/middle_orange"
            android:text="@string/camera"
            android:textStyle="bold"
            android:textColor="#334B94"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/model_btn"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:backgroundTint="@color/middle_orange"
            android:text="@string/model"
            android:textStyle="bold"
            android:textColor="#334B94"
            android:textSize="20sp"/>
    </LinearLayout>

</RelativeLayout>