<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CategoryFragment"
    android:background="@color/my_white1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_the_category_of_your_product"
                android:textSize="18sp"
                android:textColor="@color/dark_gray"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>
            <RelativeLayout
                android:id="@+id/category_rl"
                android:layout_below="@id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/productNameInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginVertical="20dp"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/middle_orange"
                    app:helperTextTextColor="@color/middle_orange"
                    app:helperTextTextAppearance="@color/middle_orange"
                    app:counterTextColor="@color/middle_orange"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/categoryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/category"
                        android:textColorHint="@color/middle_orange"
                        android:textColor="@color/light_orange"
                        android:background="@color/zxing_transparent"
                        android:textSize="16dp"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>


                <View
                    android:id="@+id/mic_category"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/mic_icon"
                    android:backgroundTint="@color/light_orange"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="30dp"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_of_pre_existing_categories"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:layout_below="@+id/subheadingtwo"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="10dp"
                />
            <TextView
                android:id="@+id/subheadingtwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_can_also_click_below_to_select_your_category"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"
                android:layout_below="@+id/category_rl"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="10dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/category_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subheading"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="20dp"/>
            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/middle_orange"
                android:text="@string/next"
                android:textColor="#334B94"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="100dp"
                android:layout_below="@+id/category_rv"/>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/custom_progres_bar"/>

</RelativeLayout>