<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:background="@color/my_white1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_on_the_search_field_to_search"
        android:textStyle="bold"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:id="@+id/subheading"/>

    <LinearLayout
        android:id="@+id/topNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_below="@+id/subheading"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/my_white1">

        <EditText
            android:id="@+id/search_catalog_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".25"
            android:hint="@string/search"
            android:inputType="text"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/dark_gray"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/search_icon"
            android:drawableTint="@color/dark_gray"
            android:background="@drawable/search_bg"
            android:backgroundTint="#CDDAE2"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/dark_gray"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/form_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/zxing_transparent">
            <ImageView
                android:id="@+id/form_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/camera_icon"
                android:background="@drawable/circle"
                android:backgroundTint="#CDDAE2"
                android:layout_margin="10dp"
                app:tint="@color/dark_gray"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_results"
        android:layout_below="@+id/topNav"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_catalog_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:visibility="gone"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="30dp"
        />

</RelativeLayout>